GraphComponent; PathFinder; --- - Улучшение кода